k8s/prod/auto_abuse_id.deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "auto-abuse-id"
  namespace: "abuse-api-prod"
  labels:
    app: "auto-abuse-id"
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: "auto-abuse-id"
  template:
    metadata:
      labels:
        app: "auto-abuse-id"
    spec:
      imagePullSecrets:
        -
          name: "dcu-artifactory-creds"
      containers:
        -
          name: "auto-abuse-id"
          imagePullPolicy: "Always"
          image: "docker-dcu-local.artifactory.secureserver.net/auto_abuse_id:REPLACE_WITH_GIT_COMMIT"
          livenessProbe:
            httpGet:
              path: /classify/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
