k8s/prod/auto_abuse_id.deployment.yml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "auto_abuse_id"
  namespace: "abuse-api-prod"
  labels:
    app: "auto_abuse_id"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: "auto_abuse_id"
    spec:
      imagePullSecrets:
        -
          name: "k8s-artifactory-creds"
      containers:
        -
          name: "auto_abuse_id"
          imagePullPolicy: "Always"
          image: "artifactory.secureserver.net:10014/docker-dcu-local/auto_abuse_id:prod"
          livenessProbe:
            exec:
              command:
                - '/app/health.sh'
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
          - name: encryption-keys
            mountPath: /keyfiles
            readOnly: true

      volumes:
        - name: encryption-keys
          secret:
            secretName: encryption-key-files
