k8s/prod/auto_abuse_id_cache.service.yaml
---
  kind: "Service"
  apiVersion: "v1"
  metadata:
    labels:
      app: "auto-abuse-id-cache"
    # this name is accessible via cluster DNS
    # ("service-cache" or "service-cache.<namespace>.svc.cluster.local")
    name: "auto-abuse-id-cache"
    namespace: abuse-api-prod
  spec:
    ports:
      -
        name: "auto-abuse-id-cache"
        port: 6379
        targetPort: 6379
    selector:
      app: "auto-abuse-id-cache"
