k8s/prod/auto_abuse_id.ingress.yaml
---
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: "auto-abuse-id"
  namespace: "abuse-api-prod"
spec:
  tls:
    - hosts:
      - "classify.int.godaddy.com"
      secretName: tls-auto-abuse-id
    - hosts:
      - "classify.cset.int.gdcorp.tools"
      secretName: cset-wildcard
  rules:
  - host: "classify.int.godaddy.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: "auto-abuse-id"
          servicePort: 5000
  - host: classify.cset.int.gdcorp.tools
    http:
      paths:
      - path: /
        backend:
          serviceName: "auto-abuse-id"
          servicePort: 5000
