k8s/prod/auto_abuse_id.ingress.yml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "auto-abuse-id"
  namespace: "abuse-api-prod"
spec:
  tls:
    - hosts:
      - "classify.int.godaddy.com"
      secretName: tls-auto-abuse-id
  rules:
  - host: "classify.int.godaddy.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: "auto-abuse-id"
          servicePort: 5000
